@@ -37,7 +37,7 @@ module type S = sig
 
   (** Abstract type for a service entry, which maps a URI scheme into
       a protocol handler and TCP port *)
-  type svc
+  type svc with sexp
 
   (** A rewrite function resolves a {{!svc}service} and a URI into
       a concrete endpoint. *)
@@ -80,7 +80,7 @@ end
 module Make(IO:Conduit.IO) = struct
   open IO
 
-  type svc = service
+  type svc = service with sexp
   type 'a io = 'a IO.t
 
   (** A rewrite modifies an input URI with more specialization
